IE8 checkbox alignment fix

--- a/modules/widgets/forms/wrapped/wrapped.scss
+++ b/modules/widgets/forms/wrapped/wrapped.scss
@@ -32,7 +32,7 @@ $module: '.form-wrapped';
     cursor: pointer;
 
     input[type="checkbox"] {
-      display: inline-block;
+      float: left;
       margin: 2px 0 0 -16px;
     }
   }
